tests/baselines/reference/tsxStatelessFunctionComponentsWithTypeArguments4.errors.txt
tests/cases/conformance/jsx/file.tsx(9,33): error TS2322: Type '{ a: 数字; }' is not assignable to type 'IntrinsicAttributes & { b: {}; a: 数字; }'.
  Type '{ a: 数字; }' is not assignable to type '{ b: {}; a: 数字; }'.
    Property 'b' is missing in type '{ a: 数字; }'.
tests/cases/conformance/jsx/file.tsx(10,33): error TS2322: Type 'T' is not assignable to type 'IntrinsicAttributes & { b: 数字; a: {}; }'.
  Type '{ b: 数字; }' is not assignable to type 'IntrinsicAttributes & { b: 数字; a: {}; }'.
    Type '{ b: 数字; }' is not assignable to type '{ b: 数字; a: {}; }'.
      Property 'a' is missing in type '{ b: 数字; }'.
        Type 'T' is not assignable to type 'IntrinsicAttributes'.
          Type '{ b: 数字; }' has no properties in common with type 'IntrinsicAttributes'.


==== tests/cases/conformance/jsx/file.tsx (2 errors) ====
    import React = require('react')
    
    declare function OverloadComponent<U>(): JSX.Element;
    declare function OverloadComponent<U>(attr: {b: U, a: string, "ignore-prop": boolean}): JSX.Element;
    declare function OverloadComponent<T, U>(attr: {b: U, a: T}): JSX.Element;
    
    // Error
    function Baz<T extends {b: number}, U extends {a: boolean, b:string}>(arg1: T, arg2: U) {
        let a0 = <OverloadComponent a={arg1.b}/>
                                    ~~~~~~~~~~
!!! error TS2322: Type '{ a: 数字; }' is not assignable to type 'IntrinsicAttributes & { b: {}; a: 数字; }'.
!!! error TS2322:   Type '{ a: 数字; }' is not assignable to type '{ b: {}; a: 数字; }'.
!!! error TS2322:     Property 'b' is missing in type '{ a: 数字; }'.
        let a2 = <OverloadComponent {...arg1} ignore-prop />  // missing a
                                    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'T' is not assignable to type 'IntrinsicAttributes & { b: 数字; a: {}; }'.
!!! error TS2322:   Type '{ b: 数字; }' is not assignable to type 'IntrinsicAttributes & { b: 数字; a: {}; }'.
!!! error TS2322:     Type '{ b: 数字; }' is not assignable to type '{ b: 数字; a: {}; }'.
!!! error TS2322:       Property 'a' is missing in type '{ b: 数字; }'.
!!! error TS2322:         Type 'T' is not assignable to type 'IntrinsicAttributes'.
!!! error TS2322:           Type '{ b: 数字; }' has no properties in common with type 'IntrinsicAttributes'.
    }